# acsi_project

./: .gitignore  README.md
Simulation/: setup.m  simulation.slx  simulationBallCatching.slx
Simulation/CAD/: CrazyFliePart.STEP  CrazyFlieSTL.STL
Simulation/Contact_Library/: README.txt  startup_Contact_Forces.m
Simulation/Contact_Library/Libraries/: Contact_Forces_Lib.slx  Parts_Lib.slx  slblocks.m
Simulation/Contact_Library/Scripts_Data/: CFL_friction_setModel.m  CFL_visual_setOnOff.m  CFR_Results.xlsx  CheckAnim.m  (+1 more)
Simulation/MinJerk/: minJerk  minJerk.cpp  minJerk.m  min_jerk.m  min_jerk_poly.m  test_min_jerk.m
Simulation/Scripts/: parameters.m
String Length Optimization/: autoGen_dynamics.m  autoGen_dynamics_with_tension.m  autoGen_forwardKinematics.m  autoGen_forwardKinematics_with_tension.m  autoGen_linearization.m  autoGen_linearization_with_tension.m  autoGen_objective.m  autoGen_objective_with_tension.m  dataAnalysis.m  deriveEquations.m  deriveEquationsFINAL.m  deriveEquationsNew.m  deriveLQRHoverController.m  deriveLQRHoverController_with_tension.m  drawRobot.m  drawRobot_with_tension.m  drawRobots.m  dynamicsSimLQR.m  dynamicsSimLQR_with_tension.m  getParameters.m  getPoints.m  getPoints_with_tension.m  interpolateK.m  interpolateTrajectory.m  linearize_with_tension.m  objective.m  swingupTrajectoryOptimization.m  trial.mat  trial2.mat  trialDetailed.mat  trialSineTrajectories.mat
String Length Optimization/OptimTraj/: animateMultiple.m
Trajectory Optimization/: autoGen_dynamics.m  autoGen_forwardKinematics.m  autoGen_linearization.m  autoGen_objective.m  deriveEquations.m  deriveEquationsKouchel.m  deriveEquationsNewNew.m  deriveLQRHoverController.m  drawRobot.m  dynamics.m  dynamicsSim.m  dynamicsSimTrajectory.m  getParameters.m  getPoints.m  linearize.m  objective.m  ricatti.m  swingupTrajectoryOptimization.m
Trajectory Optimization/OptimTraj/: animate.m  trapezoid.m
catkin_ws/src/ball_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/ball_publisher/src/: ball_publisher.cpp
catkin_ws/src/state_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/state_publisher/msg/: FlyingBilboPose.msg
catkin_ws/src/state_publisher/src/: state_publisher.cpp
catkin_ws/src/trajectory_publisher/: CMakeLists.txt  package.xml
catkin_ws/src/trajectory_publisher/include/trajectory_publisher/: lqr.hpp
catkin_ws/src/trajectory_publisher/params/: lqr.yaml
catkin_ws/src/trajectory_publisher/scripts/: keyboard_control.py  traj_send.py  traj_send_sin_excite.py
catkin_ws/src/trajectory_publisher/src/: ball_follower.cpp  dynamic_swingup.cpp  lqr_controller.cpp  trajectory_publisher.cpp
crazyflie-firmware/: cf2.dfu  cf2.elf  cf2.hex  cf2.map  config.mk
crazyflie-lib-python/examples/: autonomousSequence.py  flowsequenceSync.py  og_flow.py  optitrack.py  rigid_bodies_publisher.py
dependencies/: optirx.py  rigid_bodies_publisher.py
launch/: ball_tracker.launch  dynamic_swingup.launch  ekf_test.launch  flyingbilbo_pub.launch  hover_optitrack.launch  python_traj.launch  trajectory_track.launch  trajectory_track_keyboard.launch  trajectory_tracker.launch
(+50 files in other folders)
